# nanetti-xmas-gift

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  fly.toml
.github/workflows/: cd.yml  ci.yml
backend/: main.py  models.py  pyproject.toml
backend/services/: drive_service.py
backend/tests/: conftest.py  test_api.py  test_drive_service.py  test_models.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: EmotionSelector.jsx  Login.jsx  PhotoDisplay.jsx
